<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:icon="@drawable/ic_star_24dp"
        android:title="@string/title_rate">
        <intent
            android:name="android.intent.action.VIEW"
            android:data="market://details?id=maxirozay.com.keymax"/>
    </Preference>
    <Preference
        android:title="@string/title_share"
        android:icon="@drawable/ic_share_24dp"
        android:key="share">
        <intent
            android:name="android.intent.action.SEND"
            android:mimeType="text/plain"
            android:data="https://play.google.com/store/apps/details?id=maxirozay.com.keymax"/>
    </Preference>
    <PreferenceScreen
        android:icon="@drawable/ic_info_24dp"
        android:title="@string/title_tips">
        <PreferenceCategory
            android:title="@string/tips"
            android:summary="@string/tips">
        </PreferenceCategory>
    </PreferenceScreen>
    <ListPreference
        android:icon="@drawable/ic_keyboard_24dp"
        android:key="@string/key_keyboard_layout"
        android:title="@string/title_keyboard_layout"
        android:defaultValue="@string/default_keyboard"
        android:entries="@array/listKeyboard"
        android:entryValues="@array/listKeyboard" />
    <PreferenceScreen
        android:title="@string/title_dictionary">
        <CheckBoxPreference
            android:title="@string/title_de"
            android:summary="@string/summary_language"
            android:defaultValue="false"
            android:key="@string/key_german"/>
        <CheckBoxPreference
            android:title="@string/title_en_US"
            android:summary="@string/summary_language"
            android:defaultValue="true"
            android:key="@string/key_english"/>
        <CheckBoxPreference
            android:title="@string/title_es"
            android:summary="@string/summary_language"
            android:defaultValue="false"
            android:key="@string/key_spanish"/>
        <CheckBoxPreference
            android:title="@string/title_fr"
            android:summary="@string/summary_language"
            android:defaultValue="false"
            android:key="@string/key_french"/>
        <CheckBoxPreference
            android:title="@string/title_it"
            android:summary="@string/summary_language"
            android:defaultValue="false"
            android:key="@string/key_italian"/>
        <CheckBoxPreference
            android:title="@string/title_pt_BR"
            android:summary="@string/summary_language"
            android:defaultValue="false"
            android:key="@string/key_portuguese"/>
    </PreferenceScreen>
    <CheckBoxPreference
        android:title="@string/title_preview"
        android:summary="@string/summary_preview"
        android:defaultValue="true"
        android:key="@string/key_preview"/>
    <CheckBoxPreference
        android:title="@string/title_auto_correct"
        android:summary="@string/summary_auto_correct"
        android:defaultValue="true"
        android:key="@string/key_auto_correct"/>
    <CheckBoxPreference
        android:title="@string/title_reset_data"
        android:summary="@string/summary_reset_data"
        android:defaultValue="false"
        android:key="@string/key_reset_data"/>

</PreferenceScreen>
